--- a/Twitter/views/css/style.css
+++ b/Twitter/views/css/style.css
@@ -2,4 +2,16 @@ body {
     background-color: #141d26;
     color: #fff;
     font-family: Arial, sans-serif;
-    }
+}
+
+.tweet-container {
+    max-width: 600px;
+    margin: 20px auto;
+}
+
+.tweet {
+    background-color: #192734;
+    border-radius: 8px;
+    padding: 16px;
+    margin: 16px;
+}
