changes in style.css step 28

--- a/Twitter/views/feed.html
+++ b/Twitter/views/feed.html
@@ -11,16 +11,14 @@
     <div class="tweet-container" id="tweet-container">
         <div class="tweet">
             <div class="user-info">
-                <img class="user-avatar"
-                    src="https://pbs.twimg.com/profile_images/971150568210292736/x1cCrJpq_normal.jpg" alt="User Avatar">
+                <img class="user-avatar" src="https://pbs.twimg.com/profile_images/971150568210292736/x1cCrJpq_normal.jpg" alt="User Avatar">
                 <div>
                     <div class="user-name">Programmers Meme</div>
                     <div class="user-handle">ProgrammersMeme</div>
                 </div>
             </div>
             <div class="tweet-content">Mindset</div>
-            <img class="tweet-image" src="https://pbs.twimg.com/media/F54wKVQXUAAm1M0?format=webp&name=small"
-                alt="TweetImage">
+            <img class="tweet-image" src="https://pbs.twimg.com/media/F54wKVQXUAAm1M0?format=webp&name=small" alt="TweetImage">
             <div class="tweet-actions">
                 <i class="fa fa-heart" style="font-size:18px">
                     <label id="action-value">2</label>
