changed GetTweetsModelParams to .js file and importing of files in feed.html this is step 41

--- a/Twitter/views/feed.html
+++ b/Twitter/views/feed.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+    <script> src="../controllers/fetchTweet.js"</script>
+    <script> src="../controllers/fetchUser.js"</script>
+    <script> src="../controllers/mediaLoader.js"</script>
+    <script> src="../models/GetTweetsModelsParams.js"</script>
+
     <div class="tweet-container" id="tweet-container">
         <div class="tweet">
             <div class="user-info">
