--- a/Twitter/views/feed.html
+++ b/Twitter/views/feed.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <script> src = "../controllers/fetchTweet.js"</script>
-    <script> src = "../controllers/fetchUser.js"</script>
-    <script> src = "../controllers/mediaLoader.js"</script>
-    <script> src = "../models/GetTweetsModelsParams.js"</script>
+    <script src="../controllers/fetchTweet.js"></script>
+    <script src="../controllers/fetchUser.js"></script>
+    <script src="../controllers/mediaLoader.js"></script>
+    <script src="../models/GetTweetsModelsParams.js"></script>
 
     <div class="tweet-container" id="tweet-container">
         <div class="tweet">
