--- a/Twitter/views/feed.html
+++ b/Twitter/views/feed.html
@@ -8,33 +8,12 @@
 </head>
 
 <body>
-    <script src="../controllers/fetchTweet.js"></script>
-    <script src="../controllers/fetchUser.js"></script>
-    <script src="../controllers/mediaLoader.js"></script>
-    <script src="../models/GetTweetsModelsParams.js"></script>
+    <script src="controllers\fetchTweet.js"></script>
+    <script src="controllers\fetchUser.js"></script>
+    <script src="controllers\mediaLoader.js"></script>
+    <script src="models\GetTweetsModelParams.js"></script>
 
     <div class="tweet-container" id="tweet-container">
-        <div class="tweet">
-            <div class="user-info">
-                <img class="user-avatar"
-                    src="https://pbs.twimg.com/profile_images/971150568210292736/x1cCrJpq_normal.jpg" alt="User Avatar">
-                <div>
-                    <div class="user-name">Programmers Meme</div>
-                    <div class="user-handle">ProgrammersMeme</div>
-                </div>
-            </div>
-            <div class="tweet-content">Mindset</div>
-            <img class="tweet-image" src="https://pbs.twimg.com/media/F54wKVQXUAAm1M0?format=webp&name=small"
-                alt="TweetImage">
-            <div class="tweet-actions">
-                <i class="fa fa-heart" style="font-size:18px">
-                    <label id="action-value">2</label>
-                </i>
-                <i class="fa fa-share" style="font-size:18px">
-                    <label id="action-value">3</label>
-                </i>
-            </div>
-        </div>
     </div>
 
     <script>
